Fixed multi-path VScode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,3 @@
 {
-    "python.pythonPath": "venv/bin/python3",
-    "python.autoComplete.extraPaths": [
-        "${workspaceFolder}/app"
-    ]
+    "python.pythonPath": "venv/bin/python3"
 }
